Add more metadata